--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -1,14 +1,28 @@
 ﻿<views:BasePage
-    x:Class="MSHU.CarWash.UWP.Views.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MSHU.CarWash.UWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="using:MSHU.CarWash.UWP.Views"
-    mc:Ignorable="d">
+    xmlns:viewModels="using:MSHU.CarWash.UWP.ViewModels"
+    xmlns:Converters="using:MSHU.CarWash.UWP.Converters"
+    x:Class="MSHU.CarWash.UWP.Views.HomePage"
+    mc:Ignorable="d"
+    d:DataContext="{Binding Source={d:DesignInstance IsDesignTimeCreatable=True, Type=viewModels:HomeViewModel}}"
+    >
 
-    <Grid Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+    <views:BasePage.Resources>
+        <Converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+        <Converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </views:BasePage.Resources>
+
+
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid.Background>
+            <ImageBrush Stretch="UniformToFill" ImageSource="ms-appx:///Assets/background.png"/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
@@ -16,12 +30,31 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <local:SignOutControl Grid.Row="0"/>
-        <RelativePanel Grid.Column="0" Grid.Row="1" Background="Transparent">
-            <TextBlock Text="Registration:" x:Name="RegistrationBlock" Margin="12"
-                   RelativePanel.AlignLeftWithPanel="True" />
-            <TextBlock Text="{Binding RegistrationInfo}" RelativePanel.RightOf="RegistrationBlock"
-                   RelativePanel.AlignVerticalCenterWith="RegistrationBlock"/>
+        <views:SignOutControl Grid.Row="0"/>
+        <RelativePanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10">
+            <RelativePanel.Background>
+                <SolidColorBrush Color="#FFECECEC" Opacity="0.4"/>
+            </RelativePanel.Background>
+            <StackPanel Orientation="Horizontal" x:Name="RegistrationBlock">
+                <FontIcon x:Name="CalendarGlyph" FontSize="24" Glyph="&#xE163;" MirroredWhenRightToLeft="True" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBlock Text="Coming Up"  Margin="12"
+					RelativePanel.AlignLeftWithPanel="True" />
+            </StackPanel>
+            <TextBlock x:Name="MissingReservationTextBlock" Text="No reservation" 
+					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" Visibility="{Binding ReservationAvailable, Converter={StaticResource InverseBooleanToVisibilityConverter}}" 
+                       RelativePanel.AlignLeftWith="RegistrationBlock" RelativePanel.Below="RegistrationBlock"/>
+
+            <RelativePanel x:Name="DateBlock" RelativePanel.AlignLeftWith="RegistrationBlock" RelativePanel.Below="RegistrationBlock"
+                           Visibility="{Binding ReservationAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <TextBlock x:Name="DateTextBlock" Text="{Binding ReservationDateString}" 
+					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" />
+                <Button Margin="12, 0" RelativePanel.RightOf="DateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True">
+                    <FontIcon x:Name="TrashGlyph" FontSize="24" Glyph="&#xE107;" MirroredWhenRightToLeft="True" />
+                </Button>
+                <TextBlock Text="{Binding NumberPlate}" RelativePanel.Below="DateTextBlock" RelativePanel.AlignHorizontalCenterWith="DateTextBlock" />
+
+            </RelativePanel>
+
         </RelativePanel>
 
     </Grid>
