--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -16,6 +16,13 @@
     <views:BasePage.Resources>
         <Converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
         <Converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <DataTemplate x:Key="DateHeader">
+            <StackPanel Orientation="Horizontal">
+                <FontIcon x:Name="CalendarGlyph" FontSize="24" Glyph="&#xE163;" MirroredWhenRightToLeft="True" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBlock Text="{Binding}"  Margin="12"
+					RelativePanel.AlignLeftWithPanel="True" />
+            </StackPanel>
+        </DataTemplate>
     </views:BasePage.Resources>
 
 
@@ -31,31 +38,42 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <views:SignOutControl Grid.Row="0"/>
-        <RelativePanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10">
-            <RelativePanel.Background>
+        <StackPanel Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10">
+            <StackPanel.Background>
                 <SolidColorBrush Color="#FFECECEC" Opacity="0.4"/>
-            </RelativePanel.Background>
-            <StackPanel Orientation="Horizontal" x:Name="RegistrationBlock">
-                <FontIcon x:Name="CalendarGlyph" FontSize="24" Glyph="&#xE163;" MirroredWhenRightToLeft="True" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBlock Text="Coming Up"  Margin="12"
-					RelativePanel.AlignLeftWithPanel="True" />
-            </StackPanel>
-            <TextBlock x:Name="MissingReservationTextBlock" Text="No reservation" 
+            </StackPanel.Background>
+
+            <RelativePanel>
+                <ContentControl ContentTemplate="{StaticResource DateHeader}" Content="Coming up" x:Name="RegistrationBlock" DataContext="{StaticResource  AppBarBackgroundThemeBrush}"/>
+                <TextBlock x:Name="MissingReservationTextBlock" Text="No reservation" 
 					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" Visibility="{Binding ReservationAvailable, Converter={StaticResource InverseBooleanToVisibilityConverter}}" 
                        RelativePanel.AlignLeftWith="RegistrationBlock" RelativePanel.Below="RegistrationBlock"/>
 
-            <RelativePanel x:Name="DateBlock" RelativePanel.AlignLeftWith="RegistrationBlock" RelativePanel.Below="RegistrationBlock"
+                <RelativePanel x:Name="DateBlock" RelativePanel.AlignLeftWith="RegistrationBlock" RelativePanel.Below="RegistrationBlock"
                            Visibility="{Binding ReservationAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <TextBlock x:Name="DateTextBlock" Text="{Binding ReservationDateString}" 
+                    <TextBlock x:Name="DateTextBlock" Text="{Binding ReservationDateString}" 
 					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" />
-                <Button Margin="12, 0" RelativePanel.RightOf="DateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True">
-                    <FontIcon x:Name="TrashGlyph" FontSize="24" Glyph="&#xE107;" MirroredWhenRightToLeft="True" />
-                </Button>
-                <TextBlock Text="{Binding NumberPlate}" RelativePanel.Below="DateTextBlock" RelativePanel.AlignHorizontalCenterWith="DateTextBlock" />
+                    <Button Margin="12, 0" RelativePanel.RightOf="DateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True">
+                        <FontIcon x:Name="TrashGlyph" FontSize="24" Glyph="&#xE107;" MirroredWhenRightToLeft="True" />
+                    </Button>
+                    <TextBlock Text="{Binding NumberPlate}" RelativePanel.Below="DateTextBlock" RelativePanel.AlignHorizontalCenterWith="DateTextBlock" />
+
+                </RelativePanel>
+            </RelativePanel>
+            <RelativePanel>
+                <ContentControl ContentTemplate="{StaticResource DateHeader}" Content="Next free slot" x:Name="NextFreeSlotBlock" 
+                                DataContext="{StaticResource  AppBarBackgroundThemeBrush}"/>
+                <RelativePanel x:Name="NextFreeDateBlock" RelativePanel.AlignLeftWith="NextFreeSlotBlock" RelativePanel.Below="NextFreeSlotBlock">
+                    <TextBlock x:Name="NextFreeDateTextBlock" Text="{Binding NextFreeSlotDateString}" 
+					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" />
+                    <Button Margin="12, 0" RelativePanel.RightOf="NextFreeDateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True"
+                            Visibility="{Binding NextFreeSlotAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <FontIcon x:Name="ReserveGlyph" FontSize="24" Glyph="&#xECC8;" MirroredWhenRightToLeft="True" />
+                    </Button>
+                </RelativePanel>
 
             </RelativePanel>
-
-        </RelativePanel>
+        </StackPanel>
 
     </Grid>
 
