--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -63,14 +63,28 @@
             <RelativePanel>
                 <ContentControl ContentTemplate="{StaticResource DateHeader}" Content="Next free slot" x:Name="NextFreeSlotBlock" 
                                 DataContext="{StaticResource  AppBarBackgroundThemeBrush}"/>
-                <RelativePanel x:Name="NextFreeDateBlock" RelativePanel.AlignLeftWith="NextFreeSlotBlock" RelativePanel.Below="NextFreeSlotBlock">
+                <RelativePanel x:Name="NextFreeDateBlock" RelativePanel.AlignLeftWith="NextFreeSlotBlock" RelativePanel.Below="NextFreeSlotBlock"
+                               Visibility="{Binding QuickReservationSucceeded, Converter={StaticResource InverseBooleanToVisibilityConverter}}">
                     <TextBlock x:Name="NextFreeDateTextBlock" Text="{Binding NextFreeSlotDateString}" 
 					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" />
-                    <Button Margin="12, 0" RelativePanel.RightOf="NextFreeDateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True"
+                    <Button Name="ReserveButton" Margin="12, 0" RelativePanel.RightOf="NextFreeDateTextBlock" RelativePanel.AlignVerticalCenterWith="NextFreeDateTextBlock"
+                            Command="{Binding QuickReserveCommand}"
                             Visibility="{Binding NextFreeSlotAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <FontIcon x:Name="ReserveGlyph" FontSize="24" Glyph="&#xECC8;" MirroredWhenRightToLeft="True" />
                     </Button>
+                    <TextBlock TextWrapping="NoWrap" Name="ExtraText" Text="Extra wishes?" Style="{StaticResource TitleTextBlockStyle}" RelativePanel.AlignVerticalCenterWith="ExtraButton"
+                               RelativePanel.AlignHorizontalCenterWith="NextFreeDateTextBlock" />
+                    <Button Name="ExtraButton" Margin="12, 12" RelativePanel.Below="ReserveButton" RelativePanel.AlignHorizontalCenterWith="ReserveButton"
+                            Command="{Binding QuickReserveExtraCommand}"
+                            Visibility="{Binding NextFreeSlotAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <FontIcon x:Name="ReserveExtraGlyph" FontSize="24" Glyph="&#xECC8;" MirroredWhenRightToLeft="True" />
+                    </Button>
+
                 </RelativePanel>
+                <TextBlock Text="Reservation succeeded" Style="{StaticResource TitleTextBlockStyle}" RelativePanel.AlignHorizontalCenterWithPanel="True"
+                           RelativePanel.Below="NextFreeSlotBlock"
+                           FontWeight="Bold"
+                           Visibility="{Binding QuickReservationSucceeded, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
             </RelativePanel>
         </StackPanel>
