--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -53,7 +53,8 @@
                            Visibility="{Binding ReservationAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <TextBlock x:Name="DateTextBlock" Text="{Binding ReservationDateString}" 
 					Style="{StaticResource TitleTextBlockStyle}" FontWeight="Bold" />
-                    <Button Margin="12, 0" RelativePanel.RightOf="DateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True">
+                    <Button Margin="12, 0" RelativePanel.RightOf="DateTextBlock" RelativePanel.AlignVerticalCenterWithPanel="True"
+                            Command="{Binding DeleteReservationCommand}">
                         <FontIcon x:Name="TrashGlyph" FontSize="24" Glyph="&#xE107;" MirroredWhenRightToLeft="True" />
                     </Button>
                     <TextBlock Text="{Binding NumberPlate}" RelativePanel.Below="DateTextBlock" RelativePanel.AlignHorizontalCenterWith="DateTextBlock" />
