--- a/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
+++ b/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
@@ -41,12 +41,13 @@
         <TextBox Text="{Binding CurrentComment, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" />
         <RelativePanel Grid.Row="3" Grid.Column="1" >
             <Button Content="Cancel" x:Name="CancelButton" Command="{Binding CancelCommand, ElementName=viewControl}"
-                    RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"/>
+                    RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"
+                     Style="{StaticResource CWButtonStyle}"/>
             <Button Content="Save" x:Name="SaveButton" RelativePanel.LeftOf="CancelButton" 
                     Margin="0,4,8,4" Padding="32,4,32,4"
-                    Command="{Binding SaveCommand, ElementName=viewControl}"/>
+                    Command="{Binding SaveCommand, ElementName=viewControl}" Style="{StaticResource CWButtonStyle}"/>
             <Button Content="Delete" x:Name="DeleteButton"
-                    Command="{Binding DeleteCommand, ElementName=viewControl}"
+                    Command="{Binding DeleteCommand, ElementName=viewControl}"  Style="{StaticResource CWButtonStyle}"
                     RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"/>
         </RelativePanel>
     </Grid>
