--- a/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
@@ -131,7 +131,8 @@
                                                  SaveCommand="{Binding SaveReservationChangesCommand}"
                                                  CancelCommand="{Binding CancelReservationChangesCommand}"
                                                  DeleteCommand="{Binding DeleteReservationCommand}"
-                                                 DisplayMode="{Binding CurrentReservation, Converter={StaticResource buttonsDisplayModeConverter}}"/>
+                                                 DisplayMode="{Binding CurrentReservation, Converter={StaticResource buttonsDisplayModeConverter}}"
+                                                 IsEnabled="{Binding IsEditable}"/>
 
                 <Button Grid.Row="2" Content="Create new reservation" Margin="12,0,12,12"
                         Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}"
