--- a/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
@@ -136,7 +136,7 @@
 
                 <Button Grid.Row="2" Content="Create new reservation" Margin="12,0,12,12"
                         Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}"
-                        Command="{Binding CreateReservationCommand}"
+                        Command="{Binding CreateReservationCommand}" IsEnabled="{Binding IsEditable}"
                         Style="{StaticResource CWButtonStyle}"/>
 
             </Grid>
