--- a/src/MSHU.CarWash.UWP/Views/AppShell.xaml
+++ b/src/MSHU.CarWash.UWP/Views/AppShell.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<views:BasePage
     x:Class="MSHU.CarWash.UWP.Views.AppShell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:MSHU.CarWash.UWP.Controls"
-    mc:Ignorable="d">
+    xmlns:views="using:MSHU.CarWash.UWP.Views"
+    mc:Ignorable="d"
+    xmlns:vm="using:MSHU.CarWash.UWP.ViewModels"
+    d:DataContext="{Binding Source={d:DesignInstance IsDesignTimeCreatable=True, Type=vm:AppShellViewModel}}">
 
     <Page.Resources>
         <DataTemplate x:Key="NavMenuItemTemplate" x:DataType="controls:NavigationMenuItem">
@@ -27,7 +30,7 @@
         </DataTemplate>
     </Page.Resources>
 
-    <Grid>
+    <RelativePanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{StaticResource BrushDarkBlue}">
         <!-- Adaptive triggers -->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
@@ -53,15 +56,20 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-        <!-- Top-level navigation menu + app content -->
-        <SplitView x:Name="RootSplitView"
+        <Grid RelativePanel.AlignLeftWithPanel="True"
+              RelativePanel.AlignRightWithPanel="True"
+              RelativePanel.AlignBottomWithPanel="True"
+              RelativePanel.AlignTopWithPanel="True"
+              Visibility="{Binding InternetAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
+<!-- Top-level navigation menu + app content -->
+            <SplitView x:Name="RootSplitView"
                    DisplayMode="CompactInline"
                    OpenPaneLength="158"
                    IsTabStop="False">
-            <SplitView.Pane>
-                <RelativePanel Background="{StaticResource BrushDarkBlue}">
-                    <!-- A custom ListView to display the items in the pane.  The automation Name is set in the ContainerContentChanging event. -->
-                    <controls:NavigationMenuListView x:Name="NavMenuList"
+                <SplitView.Pane>
+                    <RelativePanel Background="{StaticResource BrushDarkBlue}">
+                        <!-- A custom ListView to display the items in the pane.  The automation Name is set in the ContainerContentChanging event. -->
+                        <controls:NavigationMenuListView x:Name="NavMenuList"
                                                      Foreground="White"
                                                      TabIndex="3"
                                                      Margin="0,48,0,0" 
@@ -72,59 +80,59 @@
                                                      ItemTemplate="{StaticResource NavMenuItemTemplate}"
                                                      ItemInvoked="NavMenuList_ItemInvoked"
                                                      RelativePanel.AlignTopWithPanel="True">
-                        <controls:NavigationMenuListView.Header>
-                            <!-- Using this custom back navigation button until the system-provided back button is enabled. -->
-                            <Button x:Name="BackButton"
+                            <controls:NavigationMenuListView.Header>
+                                <!-- Using this custom back navigation button until the system-provided back button is enabled. -->
+                                <Button x:Name="BackButton"
                                 TabIndex="2"
                                 Style="{StaticResource NavigationBackButtonStyle}"
                                 IsEnabled="{Binding AppFrame.CanGoBack, ElementName=Root}"
                                 Width="{Binding ItemsPanelRoot.Width, ElementName=NavMenuList}"
                                 HorizontalAlignment="{Binding ItemsPanelRoot.HorizontalAlignment, ElementName=NavMenuList}"
                                 Click="BackButton_Click"/>
-                        </controls:NavigationMenuListView.Header>
-                    </controls:NavigationMenuListView>
-                    <StackPanel x:Name="FooterPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True">
-                        <Image Source="Assets/microsoft-sdk.png" AutomationProperties.Name="Microsoft Logo" Stretch="None" HorizontalAlignment="Left" Margin="10,0,0,0"/>
-                        <TextBlock x:Name="Copyright" Text="&#xA9; Microsoft Corporation. All rights reserved." Style="{StaticResource CopyrightTextStyle}"
+                            </controls:NavigationMenuListView.Header>
+                        </controls:NavigationMenuListView>
+                        <StackPanel x:Name="FooterPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True">
+                            <Image Source="Assets/microsoft-sdk.png" AutomationProperties.Name="Microsoft Logo" Stretch="None" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                            <TextBlock x:Name="Copyright" Text="&#xA9; Microsoft Corporation. All rights reserved." Style="{StaticResource CopyrightTextStyle}"
                                    RelativePanel.Above="LinksPanel" Margin="10,10,0,0" FontSize="12"
                                    Foreground="White" TextWrapping="Wrap"/>
-                        <StackPanel x:Name="LinksPanel" Orientation="Horizontal" Margin="10,10,0,10">
-                            <HyperlinkButton Content="Trademarks" 
+                            <StackPanel x:Name="LinksPanel" Orientation="Horizontal" Margin="10,10,0,10">
+                                <HyperlinkButton Content="Trademarks" 
                                              Tag="http://www.microsoft.com/About/Legal/EN/US/IntellectualProperty/Trademarks/EN-US.aspx"
                                              Click="Footer_Click" FontSize="12" 
                                              Style="{StaticResource HyperlinkStyle}" />
-                            <TextBlock Text="|"  Style="{StaticResource SeparatorStyle}" VerticalAlignment="Center" />
-                            <HyperlinkButton x:Name="PrivacyLink" Content="Privacy" 
+                                <TextBlock Text="|"  Style="{StaticResource SeparatorStyle}" VerticalAlignment="Center" />
+                                <HyperlinkButton x:Name="PrivacyLink" Content="Privacy" 
                                              Tag="http://privacy.microsoft.com" 
                                              Click="Footer_Click" FontSize="12" 
                                              Style="{StaticResource HyperlinkStyle}"/>
+                            </StackPanel>
                         </StackPanel>
-                    </StackPanel>
-                </RelativePanel>
-            </SplitView.Pane>
+                    </RelativePanel>
+                </SplitView.Pane>
 
-            <SplitView.Content>
-                <!-- OnNavigatingToPage we synchronize the selected item in the nav menu with the current page.
+                <SplitView.Content>
+                    <!-- OnNavigatingToPage we synchronize the selected item in the nav menu with the current page.
                  OnNavigatedToPage we move keyboard focus to the first item on the page after it's loaded. -->
-                <Frame x:Name="frame"
+                    <Frame x:Name="frame"
                    Navigating="OnNavigatingToPage"
                    Navigated="OnNavigatedToPage">
-                    <Frame.ContentTransitions>
-                        <TransitionCollection>
-                            <NavigationThemeTransition>
-                                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
-                                    <EntranceNavigationTransitionInfo/>
-                                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
-                            </NavigationThemeTransition>
-                        </TransitionCollection>
-                    </Frame.ContentTransitions>
-                </Frame>
-            </SplitView.Content>
+                        <Frame.ContentTransitions>
+                            <TransitionCollection>
+                                <NavigationThemeTransition>
+                                    <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                                        <EntranceNavigationTransitionInfo/>
+                                    </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                                </NavigationThemeTransition>
+                            </TransitionCollection>
+                        </Frame.ContentTransitions>
+                    </Frame>
+                </SplitView.Content>
 
-        </SplitView>
+            </SplitView>
 
-        <!-- Declared last to have it rendered above everything else, but it needs to be the first item in the tab sequence. -->
-        <ToggleButton x:Name="TogglePaneButton"
+            <!-- Declared last to have it rendered above everything else, but it needs to be the first item in the tab sequence. -->
+            <ToggleButton x:Name="TogglePaneButton"
                       TabIndex="1"
                       Style="{StaticResource SplitViewTogglePaneButtonStyle}"
                       IsChecked="{Binding IsPaneOpen, ElementName=RootSplitView, Mode=TwoWay}"
@@ -132,5 +140,10 @@
                       Checked="TogglePaneButton_Checked"
                       AutomationProperties.Name="Menu"
                       ToolTipService.ToolTip="Menu" Foreground="White" />
-    </Grid>
-</Page>
+        </Grid>
+        <TextBlock                        
+            Text="Unfortunately, this app cannot work without Internet connection."
+            TextWrapping="Wrap" TextAlignment="Center"
+            Visibility="{Binding InternetAvailable, Converter={StaticResource InverseBooleanToVisibilityConverter}}" Foreground="White" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
+    </RelativePanel>
+</views:BasePage>
