--- a/src/MSHU.CarWash.UWP/Views/ExtendedSplash.xaml
+++ b/src/MSHU.CarWash.UWP/Views/ExtendedSplash.xaml
@@ -26,6 +26,6 @@
     </StackPanel>
     <StackPanel Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Center">
         <TextBlock x:Name="m_PoweredByText" Foreground="White" Margin="0,0,0,12"
-                   Text="Premier Support for Development" FontStyle="Italic" />
+                   Text="Premier Support for Developers" FontStyle="Italic" />
     </StackPanel>
 </Grid>
