Changed menu symbols, moved background image brush to resource

--- a/src/MSHU.CarWash.UWP/App.xaml
+++ b/src/MSHU.CarWash.UWP/App.xaml
@@ -18,6 +18,8 @@
                 <ResourceDictionary>
                     <Converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
                     <Converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+                    <ImageBrush ImageSource="ms-appx:///Assets/background.png" x:Key="BackgroundImage"
+                                Stretch="UniformToFill"/>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
