--- a/src/MSHU.CarWash.UWP/Views/MainPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/MainPage.xaml
@@ -23,7 +23,7 @@
                        TextAlignment="Center"
                        TextWrapping="Wrap"
                        x:Name="LoginTextBlock"
-                       Visibility="{Binding InternetAvailable, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                       Visibility="{Binding ShowSignInUI, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                 <TextBlock RelativePanel.AlignHorizontalCenterWithPanel="True" Foreground="White"
                        RelativePanel.AlignVerticalCenterWithPanel="True" FontSize="15" Margin="8"
                        Text="Unfortunately, this app cannot work without Internet connection."
@@ -32,7 +32,7 @@
             </RelativePanel>
             <Button RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0" x:Name="LoginAADButton"
                     RelativePanel.Below="InstructionsPanel" Command="{Binding LoginWithAADCommand}"
-                    Visibility="{Binding InternetAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    Visibility="{Binding ShowSignInUI, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Button.Content>
                     <Image Source="ms-appx:///Assets/work-or-school-account.png" Width="200" />
                 </Button.Content>
@@ -40,8 +40,11 @@
             <Button RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0" Margin="0,8,0,0"
                     RelativePanel.Below="LoginAADButton" Content="Login with Microsoft account"
                     IsEnabled="False" Foreground="White"
-                    Visibility="{Binding InternetAvailable, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    Visibility="{Binding ShowSignInUI, Converter={StaticResource BooleanToVisibilityConverter}}">
             </Button>
+            <ProgressRing IsActive="True"
+                          Visibility="{Binding SignInInProgress, Converter={StaticResource BooleanToVisibilityConverter}}"
+                RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.Below="InstructionsPanel" />
         </RelativePanel>
     </Grid>
 
